vlib/v/checker/tests/comptime_param_not_fn_err.vv
struct Test {
}

fn main() {
	$for f in Test.params {
		println(f)
	}
}
